base/static/css/base.css
/* General de toda la web */
* {
  font-family: verdana;
}

body {
  margin: 0;

}

a {
  color: #2980B9;
}

a:hover {
  color: #404040;
  text-decoration: none;
}

.dark-link {
  color: #404040;
}

.dark-link:hover {
  color: #2980B9;
}

.big {
  font-size: 18px;
}

.in-line-preg {
  display: inline-block;
}

span {
  font-style: italic;
  font-family: monospace;
  color: #2980B9;
  font-size: 10px;
}

.relleno {
  width: 100%;
  padding: 20px;
  margin: 10px;
  background-color: #2980B9;
  text-align: center;
  font-size: 20px;
  color: white
}

.btn-soft {
  background-color: #EEEEEE;
  color: #999999;
  padding: 5px 10px;
  text-align: center;
  border-radius: 4px;
  font-size: 12px;
}

.btn-soft:hover {
  background-color: #2980B9;
  color: white
}

.btn-dark {
  background-color: #404040;
  color: white;
  padding: 5px 10px;
  text-align: center;
  border-radius: 4px;
  font-size: 12px;
}

.btn-dark:hover {
  background-color: #2980B9;
  color: white
}

.btn-blue {
  background-color: #2980B9;
  color: white;
  padding: 5px 10px;
  text-align: center;
  border-radius: 4px;
  font-size: 12px;
}

.btn-blue:hover {
  background-color: #404040;
  color: white
}

.inline-title {
  display: inline-block;
}

a.inline-title {
  vertical-align: top;
  margin-top: 20px
}

div.inline-title {
  margin-left: 20px;
}

div #agregar {
  text-align: right;
}

.photo-home {
  width: 100%;
}


/* Formularios */
.extended-form textarea {
  width: 100%;
}

.extended-input #id_titulo, #id_nombre, #id_link, #id_autor {
  width: 100%;
}

/* Page Header */
.page-header {
  margin: 0;
  position: fixed;
  background-color: #2980B9;
  color: white;
  padding: 10px;
  height: auto;
  width: 100%;
  clear: both;
  z-index: 10000;
}

.navbar {
  background-color: #2980B9;
  color: white;
  padding: 10px;
}

a.ph-title {
  color: white;
  text-decoration: none;
}

a.ph-title:visited {
  color:white;
  text-decoration: none;
}

a.ph-title:hover {
  color: #404040;
}

.in-line-account {
  vertical-align: middle;
  width: 100%;
  height: 100%;
  text-align: right;
}

#ph-link {
  color: white;
  font-size: 20px;
  display: inline-block;
  padding-top: 20px;

}

a#ph-link:hover {
  color: #404040;
}

a#ph-grupo {
  color: white;
  font-size: 15px;
  display: block
}

a#ph-grupo:hover {
  color: #404040;
}

a.seccion {
  margin: 0px;
  border-radius: 4px;
  display: inline-block;
  padding: 5px 0;
  width: 120px;
  height: 30px;
  background-color: white;
  color:#2980B9;
  font-weight: bold;
  text-align:center;
}

a.seccion:hover {
  background-color: #404040;
  color: white;
  font-weight: bold;
}

a.menu-button {
  margin: 0px 15px;
  border-radius: 4px;
  display: inline-block;
  padding: 5px 0;
  width: 30px;
  height: 30px;
  background-color: white;
  color:#2980B9;
  font-weight: bold;
  text-align:center;
}

a.menu-button:hover {
  background-color: #404040;
  color: white;
  font-weight: bold;
}

/* Configs del cuerpo */
.container-loi {
  padding-top: 150px;
}

.side-form {
  margin-top: 20px;
}

/* Configs de bokeh */
.bk-root {
  height:auto;
}



/* Retoques a la sidebar */
#sidebar-wrapper {
  background-color: #f5f5f5;
}

.sidebar-nav li a {
  color: #2980B9;
}

.sidebar-nav li a:hover {
  background-color: #2980B9;
}

/*! REEMPLAZADO POR SIMPLE-SIDEBAR
.lateral{
margin: 0;
background-color: #404040;

float: left;
width: 20%;
height: 100%;
color: white;
padding: 10px;
}

.contenido{
padding: 10px;
margin: 0;
float: left;
width:77%;
}
.option {
padding: 1px 5px;
}

.option:hover{
background-color: black;
color: #2980B9;
}
*/

